--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "dotenv": "^16.3.1",
     "eslint": "8.42.0",
     "eslint-config-next": "13.4.5",
+    "jose": "^4.14.4",
     "jsonwebtoken": "^9.0.1",
     "lucide-react": "^0.244.0",
     "next": "13.4.5",
